<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/readColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.denis.trafficLight.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/redText"
        android:layout_marginTop="52dp"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:layout_below="@+id/stopButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/redButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="onRedButtonClick"
        android:text="@string/redText" />

    <Button
        android:id="@+id/yellowButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/redButton"
        android:layout_alignLeft="@+id/redButton"
        android:layout_alignRight="@+id/redButton"
        android:layout_alignStart="@+id/redButton"
        android:layout_below="@+id/redButton"
        android:onClick="onYellowButtonClick"
        android:text="@string/yellowText" />

    <Button
        android:id="@+id/greenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/yellowButton"
        android:layout_alignLeft="@+id/yellowButton"
        android:layout_alignRight="@+id/yellowButton"
        android:layout_alignStart="@+id/yellowButton"
        android:layout_below="@+id/yellowButton"
        android:onClick="onGreenButtonClick"
        android:text="@string/greenText" />


    <Button
        android:id="@+id/automaticChangeOver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/automaticChangeOver"
        android:layout_below="@+id/greenButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Stop"
        android:id="@+id/stopButton"
        android:layout_below="@+id/automaticChangeOver"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Exit"
        android:id="@+id/exitButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp" />
</RelativeLayout>

